fixed: pages css to DropOutPage do not overflow

--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,6 @@ body {
 #root{
   width: 100%;
   height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 code {
