--- a/src/pages/DropOutPage/DropOut.module.css
+++ b/src/pages/DropOutPage/DropOut.module.css
@@ -1,24 +1,38 @@
-.MainBody{
-  margin-top: 50px;
-  width: 75%;
-  height: auto;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.781);
-  text-align: center;
-  padding: 50px;
-}
-
-.MainBody input[type="submit"] {
+.DropOutPage {
   width: 100%;
-  padding: 10px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  min-height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.MainBody input[type="submit"]:hover {
-  background-color: #45a049;
+.EmptyDropOutPage {
+  justify-content: center;
+}
+
+.FilledDropOutPage {
+  padding: 2rem 0;
+}
+
+.DropOutPageBox {
+  width: 75%;
+  
+  padding: 50px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.781);
+  
+  text-align: center;
+}
+
+.ToRegistrationPageNav {
+  width: 100%;
+  margin-bottom: 1.5em;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.ToRegistrationPageNav :first-child {
+  max-width: 50%;
 }
